--- a/bird-call-quiz/src/pages/flashcard.css
+++ b/bird-call-quiz/src/pages/flashcard.css
@@ -1,5 +1,12 @@
+.flashcard-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+
 .flashcard {
-    width: 200px;
+    width: 500px;
     height: 300px;
     perspective: 1000px;
     /* perspective is the distance between the user and z=0 plane. */
@@ -19,6 +26,7 @@
 }
 
 .flashcard-front, .flashcard-back {
+    background-image: url("../notecard.png");
     width: 100%;
     height: 100%;
     position: absolute;
@@ -26,15 +34,13 @@
     /* backface-visibility defines whether the back of the element should be visible  */
 }
 
-.flashcard-front {
-    background-color: lightyellow;
+.flashcard-front {  
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .flashcard-back {
-    background-color: #f0f0f0;
     display: flex;
     justify-content: center;
     align-items: center;
