--- a/bird-call-quiz/src/pages/flashcard.css
+++ b/bird-call-quiz/src/pages/flashcard.css
@@ -1,10 +1,3 @@
-.flashcard-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-}
-
 .flashcard {
     width: 500px;
     height: 300px;
@@ -26,7 +19,7 @@
 }
 
 .flashcard-front, .flashcard-back {
-    background-image: url("../notecard.png");
+    background-image: url("../images/notecard.png");
     width: 100%;
     height: 100%;
     position: absolute;
